@@ -5,6 +5,7 @@ import javax.servlet.http.*;
 import javax.servlet.jsp.*;
 import java.util.*;
 import org.apache.hadoop.io.Text;
+import org.apache.hadoop.util.VersionInfo;
 import org.apache.hadoop.hbase.HMaster;
 import org.apache.hadoop.hbase.HConstants;
 import org.apache.hadoop.hbase.HMaster.MetaRegion;
@@ -69,7 +70,18 @@ public final class master_jsp extends org.apache.jasper.runtime.HttpJspBase
       out.print( master.getMasterAddress());
       out.write("</title>\n<link rel=\"stylesheet\" type=\"text/css\" href=\"/static/hbase.css\" />\n</head>\n\n<body>\n\n<a id=\"logo\" href=\"http://wiki.apache.org/lucene-hadoop/Hbase\"><img src=\"/static/hbase_logo_med.gif\" alt=\"Hbase Logo\" title=\"Hbase Logo\" /></a>\n<h1 id=\"page_title\">Master: ");
       out.print(master.getMasterAddress());
-      out.write("</h1>\n<p id=\"links_menu\"><a href=\"/hql.jsp\">HQL</a>, <a href=\"/logs/\">Local logs</a>, <a href=\"/stacks\">Thread Dump</a>, <a href=\"/logLevel\">Log Level</a></p>\n<hr id=\"head_rule\" />\n\n<h2>Master Attributes</h2>\n<table>\n<tr><th>Attribute Name</th><th>Value</th><th>Description</th></tr>\n<tr><td>Filesystem</td><td>");
+      out.write("</h1>\n<p id=\"links_menu\"><a href=\"/hql.jsp\">HQL</a>, <a href=\"/logs/\">Local logs</a>, <a href=\"/stacks\">Thread Dump</a>, <a href=\"/logLevel\">Log Level</a></p>\n<hr id=\"head_rule\" />\n\n<h2>Master Attributes</h2>\n<table>\n<tr><th>Attribute Name</th><th>Value</th><th>Description</th></tr>\n<tr><td>Version</td><td>");
+      out.print( VersionInfo.getVersion() );
+      out.write(',');
+      out.write(' ');
+      out.write('r');
+      out.print( VersionInfo.getRevision() );
+      out.write("</td><td>Hbase version and svn revision</td></tr>\n<tr><td>Compiled</td><td>");
+      out.print( VersionInfo.getDate() );
+      out.write(',');
+      out.write(' ');
+      out.print( VersionInfo.getUser() );
+      out.write("</td><td>When this version was compiled and by whom</td></tr>\n<tr><td>Filesystem</td><td>");
       out.print( conf.get("fs.default.name") );
       out.write("</td><td>Filesystem hbase is running on</td></tr>\n<tr><td>Hbase Root Directory</td><td>");
       out.print( master.getRootDir().toString() );
